--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         I am a cautious, detail-oriented person, and I always aim to be the best in my group.
                         I always push myself out of my comfort zone and test my limits! 
                     </p>
-                    <a href="C:\Users\12941\OneDrive\桌面\CV\JIngtian's Resume NEW.pdf" download="newfilename">Download My CV</a>
+                    <a href="JIngtian's Resume NEW.pdf" download="newfilename">Download My CV</a>
                 </div>
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
